@@ -31,10 +31,10 @@ import org.testng.annotations.Test;
  * DURATION_MS and a number of threads similar to the use case you're interested in: results might
  * vary on the number of threads because of the lock differences. This is not meant as a benchmark
  * but used to detect regressions.
- * 
+ *
  * This requires Lucene > 2.9.1 or Lucene > 3.0.0 because of
  * https://issues.apache.org/jira/browse/LUCENE-2095
- * 
+ *
  * @author Sanne Grinovero
  * @since 4.0
  */
@@ -51,12 +51,13 @@ public class PerformanceCompareStressTest {
    /** Concurrent Threads in tests */
    private static final int READER_THREADS = 5;
    private static final int WRITER_THREADS = 1;
-   
+
    private static final int CHUNK_SIZE = 512 * 1024;
 
    private static final String indexName = "tempIndexName";
 
-   private long durationMs = 2 * 60 * 1000;
+   private static final long DEFAULT_DURATION_MS = 2 * 60 * 1000;
+   private long durationMs = DEFAULT_DURATION_MS;
 
    private Cache cache;
 
@@ -72,13 +73,13 @@ public class PerformanceCompareStressTest {
 
    @Test
    public void profileTestFSDirectory() throws InterruptedException, IOException {
-      File indexDir = new File(new File("."), indexName);
+      File indexDir = new File(TestingUtil.tmpDirectory(this.getClass()), indexName);
       boolean directoriesCreated = indexDir.mkdirs();
       assert directoriesCreated : "couldn't create directory for FSDirectory test";
       FSDirectory dir = FSDirectory.open(indexDir);
       stressTestDirectoryInternal(dir, "FSDirectory");
    }
-   
+
    @Test
    public void profileTestInfinispanDirectoryWithNetworkDelayZero() throws InterruptedException, IOException {
       // TestingUtil.setDelayForCache(cache, 0, 0);
@@ -168,7 +169,7 @@ public class PerformanceCompareStressTest {
       TestingUtil.killCacheManagers(cacheFactory);
       TestingUtil.recursiveFileRemove(indexName);
    }
-   
+
    private void verifyDirectoryState() {
       DirectoryIntegrityCheck.verifyDirectoryStructure(cache, indexName, true);
    }
@@ -176,15 +177,18 @@ public class PerformanceCompareStressTest {
    /**
     * It's much better to compare performance out of the scope of TestNG by
     * running this directly as TestNG enables assertions.
-    * 
+    *
     * Suggested test switches:
-    * -Xmx2G -Xms2G -XX:MaxPermSize=128M -XX:+HeapDumpOnOutOfMemoryError -Xss512k -XX:HeapDumpPath=/tmp/java_heap -Djava.net.preferIPv4Stack=true -Djgroups.bind_addr=127.0.0.1 -Xbatch -server -XX:+UseCompressedOops -XX:+UseLargePages -XX:LargePageSizeInBytes=2m -XX:+AlwaysPreTouch
+    * -Xmx4G -Xms4G -XX:MaxPermSize=128M -XX:+HeapDumpOnOutOfMemoryError -Xss512k -XX:HeapDumpPath=/tmp/java_heap -Djava.net.preferIPv4Stack=true -Djgroups.bind_addr=127.0.0.1 -XX:+UseLargePages -XX:LargePageSizeInBytes=2m
+    *
+    * With detailed GC logging:
+    * -Xmx4G -Xms4G -XX:MaxPermSize=32M -XX:+HeapDumpOnOutOfMemoryError -Xss256k -XX:HeapDumpPath=/tmp/java_heap -Djava.net.preferIPv4Stack=true -Djgroups.bind_addr=127.0.0.1 -XX:+UseLargePages -XX:LargePageSizeInBytes=2m -XX:+UseLargePages -XX:LargePageSizeInBytes=2m -Xloggc:gc-full.log -XX:+PrintGCDetails -XX:+PrintTenuringDistribution -XX:+PrintGCApplicationStoppedTime
     */
    public static void main(String[] args) throws Exception {
       String[] testMethods = System.getProperty("lucene.profiling.tests",
             "profileTestRAMDirectory,profileTestFSDirectory,profileInfinispanLocalDirectory,profileTestInfinispanDirectoryWithNetworkDelayZero").split(",");
       PerformanceCompareStressTest test = new PerformanceCompareStressTest();
-      test.durationMs = new Long(System.getProperty("lucene.profiling.duration", "120000"));
+      test.durationMs = new Long(System.getProperty("lucene.profiling.duration", String.valueOf(DEFAULT_DURATION_MS)));
       String outputFile = System.getProperty("lucene.profiling.output");
       test.results = outputFile == null ? null : new Properties();
       for (String testMethod : testMethods) {
